🔥 refactor: move NFTsToTransfer state from local to global store for better state management 🎨 style(Transfer.module.css): adjust color for better visibility ✨ feat(Transfer.tsx): add approve step before transfer for better user experience 🔧 fix(useWriteContract.tsx): increase confirmations for transaction receipt for better reliability 🔥 refactor: remove unnecessary props after moving NFTsToTransfer to global store

--- a/src/components/templates/3_transfer/Transfer.module.css
+++ b/src/components/templates/3_transfer/Transfer.module.css
@@ -29,6 +29,7 @@
     justify-content: space-around;
     width: 95%;
     gap: 2rem;
+    color: var(--black);
 }
 
 .backButton {
@@ -42,9 +43,7 @@
     border: none;
     text-align: center;
     letter-spacing: 1px;
-    margin: auto;
     background-color: var(--white);
-    color: var(--black);
     font-size: 16px;
     font-weight: 700;
 }
